--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -2,190 +2,184 @@
 <div *ngIf="error">{{ error }}</div>
 
 <app-nav-bar></app-nav-bar>
+<div class="container">
+  <h2 class="title">GRUP PENCAPAIAN</h2>
 
-<h2>Group Achievements</h2>
-
-<!-- Button to open the create modal -->
-<div class="card flex justify-content-center">
-  <p-button
-    label="+ Create new group achievement"
-    icon="pi pi-check"
-    (click)="showCreateDialog()"
-  ></p-button>
-</div>
-
-<!-- PrimeNG Dialog for creating a new group achievement -->
-<p-dialog
-  header="Create Group Achievement"
-  [(visible)]="displayCreateDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '400px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label for="groupName">Group Achievement</label>
-      <input
-        id="groupName"
-        type="text"
-        pInputText
-        [(ngModel)]="newGroupAchievement.group_achievement_name"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="percentage">Percentage</label>
-      <input
-        id="percentage"
-        type="number"
-        pInputText
-        [(ngModel)]="newGroupAchievement.percentage"
-      />
-    </div>
+  <!-- Button to open the create modal -->
+  <div class="card flex justify-content-end">
+    <p-button
+      label="Create "
+      icon="pi pi-plus"
+      (click)="showCreateDialog()"
+    ></p-button>
   </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
-      label="Create"
-      icon="pi pi-check"
-      (click)="createGroupAchievement()"
-    ></button>
-    <button
-      type="button"
-      pButton
-      label="Cancel"
-      icon="pi pi-times"
-      (click)="displayCreateDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
 
-<!-- PrimeNG Dialog for editing a group attitude skill -->
-<p-dialog
-  header="Edit Group Achievement"
-  [(visible)]="displayEditDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '400px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label for="editGroupName">Group Achievement</label>
-      <input
-        id="editGroupName"
-        type="text"
-        pInputText
-        [(ngModel)]="selectedGroupAchievement.group_achievement_name"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="editPercentage">Percentage</label>
-      <input
-        id="editPercentage"
-        type="number"
-        pInputText
-        [(ngModel)]="selectedGroupAchievement.percentage"
-      />
-    </div>
-  </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
-      label="Save"
-      icon="pi pi-save"
-      (click)="updateGroupAchievement()"
-    ></button>
-    <button
-      type="button"
-      pButton
-      label="Cancel"
-      icon="pi pi-times"
-      (click)="displayEditDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
-
-<!-- Existing Table for Achievements -->
-<div class="card">
-  <p-table
-    #dt2
-    [value]="groupAchievements"
-    dataKey="id"
-    [rows]="10"
-    [rowsPerPageOptions]="[10, 25, 50]"
-    [loading]="isLoading"
-    [paginator]="true"
-    [globalFilterFields]="['group_achievement_name', 'percentage']"
-    [tableStyle]="{ 'min-width': '75rem' }"
+  <!-- PrimeNG Dialog for creating a new group achievement -->
+  <p-dialog
+    header="Create Group Achievement"
+    [(visible)]="displayCreateDialog"
+    modal="true"
+    [closable]="true"
+    [style]="{ width: '400px' }"
   >
-    <ng-template pTemplate="header">
-      <tr>
-        <!-- <th style="width: 25%">ID</th> -->
-        <th style="width: 35%">Group Name</th>
-        <th style="width: 25%">Percentage</th>
-        <th style="width: 15%">Action</th>
-      </tr>
-      <tr>
-        <!-- <th>
-          <p-columnFilter
-            type="text"
-            field="id"
-            placeholder="Search by ID"
-            ariaLabel="Filter ID"
-          />
-        </th> -->
-        <th>
-          <p-columnFilter
-            type="text"
-            field="group_name"
-            placeholder="Search by group name"
-            ariaLabel="Filter Group Name"
-          />
-        </th>
-        <th>
-          <p-columnFilter
-            type="text"
-            field="percentage"
-            placeholder="Search by Percentage"
-            ariaLabel="Filter Percentage"
-            display="row"
-          />
-        </th>
-        <th></th>
-      </tr>
-    </ng-template>
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="groupName">Group Achievement</label>
+        <input
+          id="groupName"
+          type="text"
+          pInputText
+          [(ngModel)]="newGroupAchievement.group_achievement_name"
+        />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="percentage">Percentage</label>
+        <input
+          id="percentage"
+          type="number"
+          pInputText
+          [(ngModel)]="newGroupAchievement.percentage"
+        />
+      </div>
+    </div>
+    <p-footer>
+      <button
+        type="button"
+        pButton
+        label="Create"
+        icon="pi pi-check"
+        (click)="createGroupAchievement()"
+      ></button>
+      <button
+        type="button"
+        pButton
+        label="Cancel"
+        icon="pi pi-times"
+        (click)="displayCreateDialog = false"
+      ></button>
+    </p-footer>
+  </p-dialog>
 
-    <ng-template pTemplate="body" let-achievement>
-      <tr>
-        <!-- <td>{{ achievement.id }}</td> -->
-        <td>{{ achievement.group_achievement_name }}</td>
-        <td>{{ achievement.percentage }}%</td>
-        <td>
-          <button
-            pButton
-            icon="pi pi-pencil"
-            label="Edit"
-            class="p-button-sm p-button-info"
-            (click)="editGroupAchievement(achievement)"
-          ></button>
-          <button
-            pButton
-            icon="pi pi-trash"
-            label="Delete"
-            class="p-button-sm p-button-danger"
-            (click)="deleteGroupAchievement(achievement.id)"
-          ></button>
-        </td>
-      </tr>
-    </ng-template>
+  <!-- PrimeNG Dialog for editing a group attitude skill -->
+  <p-dialog
+    header="Edit Group Achievement"
+    [(visible)]="displayEditDialog"
+    modal="true"
+    [closable]="true"
+    [style]="{ width: '400px' }"
+  >
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="editGroupName">Group Achievement</label>
+        <input
+          id="editGroupName"
+          type="text"
+          pInputText
+          [(ngModel)]="selectedGroupAchievement.group_achievement_name"
+        />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="editPercentage">Percentage</label>
+        <input
+          id="editPercentage"
+          type="number"
+          pInputText
+          [(ngModel)]="selectedGroupAchievement.percentage"
+        />
+      </div>
+    </div>
+    <p-footer>
+      <button
+        type="button"
+        pButton
+        label="Save"
+        icon="pi pi-save"
+        (click)="updateGroupAchievement()"
+      ></button>
+      <button
+        type="button"
+        pButton
+        label="Cancel"
+        icon="pi pi-times"
+        (click)="displayEditDialog = false"
+      ></button>
+    </p-footer>
+  </p-dialog>
 
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="4">No achievements found.</td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <!-- Existing Table for Achievements -->
+  <div class="card">
+    <p-table
+      #dt2
+      [value]="groupAchievements"
+      dataKey="id"
+      [rows]="10"
+      [rowsPerPageOptions]="[10, 25, 50]"
+      [loading]="isLoading"
+      [paginator]="true"
+      [globalFilterFields]="['group_achievement_name', 'percentage']"
+      [tableStyle]="{ 'min-width': '45rem' }"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th style="width: 10px">No.</th>
+          <th class="group-column">Group Name</th>
+          <th class="percent-column">Percentage</th>
+          <th class="percent-column">Action</th>
+        </tr>
+        <tr>
+          <th></th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="group_name"
+              placeholder="Search by group name"
+              ariaLabel="Filter Group Name"
+            />
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="percentage"
+              placeholder="Search by Percentage"
+              ariaLabel="Filter Percentage"
+              display="row"
+            />
+          </th>
+          <th></th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-achievement let-i="rowIndex">
+        <tr>
+          <td>{{ i + 1 }}</td>
+          <td>{{ achievement.group_achievement_name }}</td>
+          <td>{{ achievement.percentage }}%</td>
+          <td>
+            <div class="action-buttons">
+              <button
+                pButton
+                icon="pi pi-pencil"
+                class="p-button-sm p-button-info"
+                (click)="editGroupAchievement(achievement)"
+              ></button>
+              <button
+                pButton
+                icon="pi pi-trash"
+                class="p-button-sm p-button-danger"
+                (click)="deleteGroupAchievement(achievement.id)"
+              ></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="4">No achievements found.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
