--- a/src/app/features/achievement/achievement.component.html
+++ b/src/app/features/achievement/achievement.component.html
@@ -2,194 +2,188 @@
 <div *ngIf="error">{{ error }}</div>
 
 <app-nav-bar></app-nav-bar>
+<div class="container">
+  <h2 class="title">PENCAPAIAN</h2>
 
-<h2>Achievements</h2>
-
-<!-- Button to open the create modal -->
-<div class="card flex justify-content-center">
-  <p-button
-    label="+ Create new achievement"
-    icon="pi pi-check"
-    (click)="showCreateDialog()"
-  ></p-button>
-</div>
-
-<!-- PrimeNG Dialog for creating a new group achievement -->
-<p-dialog
-  header="Create New Achievement"
-  [(visible)]="displayCreateDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '400px', height: '450px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label for="achievementName">Achievement Name</label>
-      <input
-        pInputText
-        id="achievementName"
-        [(ngModel)]="newAchievement.achievement_name"
-        placeholder="Enter Achievement Name"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="groupAchievement">Group Achievement</label>
-      <p-dropdown
-        [options]="groupAchievementOptions"
-        [(ngModel)]="newAchievement.group_achievement_id"
-        (onChange)="onGroupAchievementChange($event)"
-        placeholder="Select Group Achievement"
-      >
-      </p-dropdown>
-    </div>
-  </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
+  <!-- Button to open the create modal -->
+  <div class="card flex justify-content-end">
+    <p-button
       label="Create"
-      icon="pi pi-check"
-      (click)="createAchievement()"
-    ></button>
-    <button
-      type="button"
-      pButton
-      label="Cancel"
-      icon="pi pi-times"
-      (click)="displayCreateDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
-
-<!-- PrimeNG Dialog for editing an achievement -->
-<p-dialog
-  header="Edit Achievement"
-  [(visible)]="displayEditDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '400px', height: '450px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label for="editAchievementName">Achievement Name</label>
-      <input
-        pInputText
-        id="editAchievementName"
-        [(ngModel)]="editAchievement.achievement_name"
-        placeholder="Enter Achievement Name"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="editGroupAchievement">Group Achievement</label>
-      <p-dropdown
-        [options]="groupAchievementOptions"
-        [(ngModel)]="editAchievement.group_achievement_id"
-        placeholder="Select Group Achievement"
-      >
-      </p-dropdown>
-    </div>
+      icon="pi pi-plus"
+      (click)="showCreateDialog()"
+    ></p-button>
   </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
-      label="Save"
-      icon="pi pi-check"
-      (click)="updateAchievement()"
-    ></button>
-    <button
-      type="button"
-      pButton
-      label="Cancel"
-      icon="pi pi-times"
-      (click)="displayEditDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
 
-<!-- Existing Table for Achievements -->
-<div class="card">
-  <p-table
-    #dt2
-    [value]="achievements"
-    dataKey="id"
-    [rows]="10"
-    [rowsPerPageOptions]="[10, 25, 50]"
-    [loading]="isLoading"
-    [paginator]="true"
-    [globalFilterFields]="[
-      'achievement_name',
-      'group_achievement_name',
-      'group_achievement_id'
-    ]"
-    [tableStyle]="{ 'min-width': '75rem' }"
+  <!-- PrimeNG Dialog for creating a new group achievement -->
+  <p-dialog
+    header="Create New Achievement"
+    [(visible)]="displayCreateDialog"
+    modal="true"
+    [closable]="true"
+    [style]="{ width: '400px', height: '450px' }"
   >
-    <ng-template pTemplate="header">
-      <tr>
-        <!-- <th style="width: 25%">ID</th> -->
-        <th style="width: 35%">Achievement Name</th>
-        <th style="width: 25%">Group Achievement Name</th>
-        <th style="width: 15%">Action</th>
-      </tr>
-      <tr>
-        <!-- <th>
-          <p-columnFilter
-            type="text"
-            field="id"
-            placeholder="Search by ID"
-            ariaLabel="Filter ID"
-          />
-        </th> -->
-        <th>
-          <p-columnFilter
-            type="text"
-            field="achievement_name"
-            placeholder="Search by name"
-            ariaLabel="Filter Achievement Name"
-          />
-        </th>
-        <th>
-          <p-columnFilter
-            type="text"
-            field="group_achievement_name"
-            placeholder="Search by Group Name"
-            ariaLabel="Filter Group Achievement Name"
-          />
-        </th>
-        <th></th>
-      </tr>
-    </ng-template>
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="achievementName">Achievement Name</label>
+        <input
+          pInputText
+          id="achievementName"
+          [(ngModel)]="newAchievement.achievement_name"
+          placeholder="Enter Achievement Name"
+        />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="groupAchievement">Group Achievement</label>
+        <p-dropdown
+          [options]="groupAchievementOptions"
+          [(ngModel)]="newAchievement.group_achievement_id"
+          (onChange)="onGroupAchievementChange($event)"
+          placeholder="Select Group Achievement"
+        >
+        </p-dropdown>
+      </div>
+    </div>
+    <p-footer>
+      <button
+        type="button"
+        pButton
+        label="Create"
+        icon="pi pi-check"
+        (click)="createAchievement()"
+      ></button>
+      <button
+        type="button"
+        pButton
+        label="Cancel"
+        icon="pi pi-times"
+        (click)="displayCreateDialog = false"
+      ></button>
+    </p-footer>
+  </p-dialog>
 
-    <ng-template pTemplate="body" let-achievement>
-      <tr>
-        <!-- <td>{{ achievement.id }}</td> -->
-        <td>{{ achievement.achievement_name }}</td>
-        <td>{{ achievement.group_achievement_name }}</td>
-        <td>
-          <button
-            pButton
-            icon="pi pi-pencil"
-            label="Edit"
-            class="p-button-sm p-button-info"
-            (click)="showEditDialog(achievement)"
-          ></button>
-          <button
-            pButton
-            icon="pi pi-trash"
-            label="Delete"
-            class="p-button-sm p-button-danger"
-            (click)="deleteAchievement(achievement.id)"
-          ></button>
-        </td>
-      </tr>
-    </ng-template>
+  <!-- PrimeNG Dialog for editing an achievement -->
+  <p-dialog
+    header="Edit Achievement"
+    [(visible)]="displayEditDialog"
+    modal="true"
+    [closable]="true"
+    [style]="{ width: '400px', height: '450px' }"
+  >
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="editAchievementName">Achievement Name</label>
+        <input
+          pInputText
+          id="editAchievementName"
+          [(ngModel)]="editAchievement.achievement_name"
+          placeholder="Enter Achievement Name"
+        />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="editGroupAchievement">Group Achievement</label>
+        <p-dropdown
+          [options]="groupAchievementOptions"
+          [(ngModel)]="editAchievement.group_achievement_id"
+          placeholder="Select Group Achievement"
+        >
+        </p-dropdown>
+      </div>
+    </div>
+    <p-footer>
+      <button
+        type="button"
+        pButton
+        label="Save"
+        icon="pi pi-check"
+        (click)="updateAchievement()"
+      ></button>
+      <button
+        type="button"
+        pButton
+        label="Cancel"
+        icon="pi pi-times"
+        (click)="displayEditDialog = false"
+      ></button>
+    </p-footer>
+  </p-dialog>
 
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="4">No achievements found.</td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <!-- Existing Table for Achievements -->
+  <div class="card">
+    <p-table
+      #dt2
+      [value]="achievements"
+      dataKey="id"
+      [rows]="10"
+      [rowsPerPageOptions]="[10, 25, 50]"
+      [loading]="isLoading"
+      [paginator]="true"
+      [globalFilterFields]="[
+        'achievement_name',
+        'group_achievement_name',
+        'group_achievement_id'
+      ]"
+      [tableStyle]="{ 'min-width': '55rem' }"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th class="no-column">No.</th>
+          <th style="width: 35%">Achievement Name</th>
+          <th style="width: 25%">Group Achievement Name</th>
+          <th style="width: 15%">Action</th>
+        </tr>
+        <tr>
+          <th></th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="achievement_name"
+              placeholder="Search by name"
+              ariaLabel="Filter Achievement Name"
+            />
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="group_achievement_name"
+              placeholder="Search by Group Name"
+              ariaLabel="Filter Group Achievement Name"
+            />
+          </th>
+          <th></th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-achievement let-i="rowIndex">
+        <tr>
+          <td class="no-column">{{ i + 1 }}</td>
+          <td>{{ achievement.achievement_name }}</td>
+          <td>{{ achievement.group_achievement_name }}</td>
+          <td>
+            <div class="action-buttons">
+              <button
+                pButton
+                icon="pi pi-pencil"
+                class="p-button-sm p-button-info"
+                (click)="showEditDialog(achievement)"
+              ></button>
+              <button
+                pButton
+                icon="pi pi-trash"
+                class="p-button-sm p-button-danger"
+                (click)="deleteAchievement(achievement.id)"
+              ></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="4">No achievements found.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
