--- a/src/app/features/attitude-skill/attitude-skill.component.html
+++ b/src/app/features/attitude-skill/attitude-skill.component.html
@@ -2,251 +2,187 @@
 <div *ngIf="error">{{ error }}</div>
 
 <app-nav-bar></app-nav-bar>
+<div class="container">
+  <h2 class="title">SIKAP & KEAHLIAN</h2>
 
-<h2>Attitude Skill</h2>
-
-<!-- Button to open the create modal -->
-<div class="card flex justify-content-center">
-  <p-button
-    label="+ Create new attitude skill"
-    icon="pi pi-check"
-    (click)="showCreateDialog()"
-  ></p-button>
-</div>
-
-<!-- PrimeNG Dialog for creating a new group achievement -->
-<p-dialog
-  header="Create New Attitude Skill"
-  [(visible)]="displayCreateDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '400px', height: '450px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label for="attitudeSkillName">Attitude Skill</label>
-      <input
-        pInputText
-        id="attitudeSkillName"
-        [(ngModel)]="newAttitudeSkill.attitude_skill_name"
-        placeholder="Enter Attitude Skill"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="groupAttitudeSkill">Group Attitude Skill</label>
-      <p-dropdown
-        [options]="groupAttitudeSkillOptions"
-        [(ngModel)]="newAttitudeSkill.group_attitude_skill_id"
-        placeholder="Select Group Attitude Skill"
-      >
-      </p-dropdown>
-    </div>
-  </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
+  <!-- Button to open the create modal -->
+  <div class="card flex justify-content-end">
+    <p-button
       label="Create"
-      icon="pi pi-check"
-      (click)="createAttitudeSkill()"
-    ></button>
-    <button
-      type="button"
-      pButton
-      label="Cancel"
-      icon="pi pi-times"
-      (click)="displayCreateDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
-
-<!-- PrimeNG Dialog for editing an achievement -->
-<p-dialog
-  header="Edit Achievement"
-  [(visible)]="displayEditDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '400px', height: '450px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label for="editAchievementName">Attitude Skill</label>
-      <input
-        pInputText
-        id="editAchievementName"
-        [(ngModel)]="editAttitudeSkill.attitude_skill_name"
-        placeholder="Enter Achievement Name"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="editGroupAchievement">Group Attitude Skill</label>
-      <p-dropdown
-        [options]="groupAttitudeSkillOptions"
-        [(ngModel)]="editAttitudeSkill.group_attitude_skill_id"
-        placeholder="Select Group Achievement"
-      >
-      </p-dropdown>
-    </div>
+      icon="pi pi-plus"
+      (click)="showCreateDialog()"
+    ></p-button>
   </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
-      label="Save"
-      icon="pi pi-check"
-      (click)="updateAttitudeSkill()"
-    ></button>
-    <button
-      type="button"
-      pButton
-      label="Cancel"
-      icon="pi pi-times"
-      (click)="displayEditDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
 
-<!-- PrimeNG Dialog for showing Division Details -->
-<p-dialog
-  header="Division Details"
-  [(visible)]="displayDetailDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '500px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label style="color: maroon">Created At:</label>
-      <p style="color: red">
-        {{ selectedDivisionDetail?.created_at }}
-      </p>
-    </div>
-    <div class="p-field">
-      <label style="color: maroon">Created By:</label>
-      <p style="color: red">
-        {{ selectedDivisionDetail?.created_by?.full_name }}
-      </p>
-    </div>
-    <div class="p-field">
-      <label style="color: maroon">Updated At:</label>
-      <p style="color: red">
-        {{
-          selectedDivisionDetail?.updated_at ??
-            "-- data have not been updated yet --"
-        }}
-      </p>
-    </div>
-    <div class="p-field">
-      <label style="color: maroon">Updated By:</label>
-      <p style="color: red">
-        {{
-          selectedDivisionDetail?.updated_by?.full_name ??
-            "-- data have not been updated yet --"
-        }}
-      </p>
-    </div>
-  </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
-      label="Close"
-      icon="pi pi-times"
-      (click)="displayDetailDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
-
-<!-- Existing Table for Achievements -->
-<div class="card">
-  <p-table
-    #dt2
-    [value]="attitudeSkills"
-    dataKey="id"
-    [rows]="10"
-    [rowsPerPageOptions]="[10, 25, 50]"
-    [loading]="isLoading"
-    [paginator]="true"
-    [globalFilterFields]="[
-      'attitude_skill_name',
-      'group_name',
-      'group_attitude_skill_id'
-    ]"
-    [tableStyle]="{ 'min-width': '75rem' }"
+  <!-- PrimeNG Dialog for creating a new group achievement -->
+  <p-dialog
+    header="Create New Attitude Skill"
+    [(visible)]="displayCreateDialog"
+    modal="true"
+    [closable]="true"
+    [style]="{ width: '400px', height: '450px' }"
   >
-    <ng-template pTemplate="header">
-      <tr>
-        <!-- <th style="width: 25%">ID</th> -->
-        <th style="width: 35%">Attitude Skill</th>
-        <th style="width: 25%">Group Attitude Skill</th>
-        <th style="width: 15%">Action</th>
-      </tr>
-      <tr>
-        <!-- <th>
-          <p-columnFilter
-            type="text"
-            field="id"
-            placeholder="Search by ID"
-            ariaLabel="Filter ID"
-          />
-        </th> -->
-        <th>
-          <p-columnFilter
-            type="text"
-            field="attitude_skill_name"
-            placeholder="Search by attitude skill"
-            ariaLabel="Filter Attitude Skill"
-          />
-        </th>
-        <th>
-          <p-columnFilter
-            type="text"
-            field="group_name"
-            placeholder="Search by Group Attitude Skill"
-            ariaLabel="Filter Group Attitude skill"
-          />
-        </th>
-        <th></th>
-      </tr>
-    </ng-template>
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="attitudeSkillName">Attitude Skill</label>
+        <input
+          pInputText
+          id="attitudeSkillName"
+          [(ngModel)]="newAttitudeSkill.attitude_skill_name"
+          placeholder="Enter Attitude Skill"
+        />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="groupAttitudeSkill">Group Attitude Skill</label>
+        <p-dropdown
+          [options]="groupAttitudeSkillOptions"
+          [(ngModel)]="newAttitudeSkill.group_attitude_skill_id"
+          placeholder="Select Group Attitude Skill"
+        >
+        </p-dropdown>
+      </div>
+    </div>
+    <p-footer>
+      <button
+        type="button"
+        pButton
+        label="Create"
+        icon="pi pi-check"
+        (click)="createAttitudeSkill()"
+      ></button>
+      <button
+        type="button"
+        pButton
+        label="Cancel"
+        icon="pi pi-times"
+        (click)="displayCreateDialog = false"
+      ></button>
+    </p-footer>
+  </p-dialog>
 
-    <ng-template pTemplate="body" let-achievement>
-      <tr>
-        <!-- <td>{{ achievement.id }}</td> -->
-        <td>{{ achievement.attitude_skill_name }}</td>
-        <td>{{ achievement.group_name }}</td>
-        <td>
-          <button
-            pButton
-            icon="pi pi-info-circle"
-            label="Detail"
-            class="p-button-sm p-button-secondary"
-            (click)="showDetailDialog(achievement)"
-          ></button>
-          <button
-            pButton
-            icon="pi pi-pencil"
-            label="Edit"
-            class="p-button-sm p-button-info"
-            (click)="showEditDialog(achievement)"
-          ></button>
-          <button
-            pButton
-            icon="pi pi-trash"
-            label="Delete"
-            class="p-button-sm p-button-danger"
-            (click)="deleteAttitudeSkill(achievement.id)"
-          ></button>
-        </td>
-      </tr>
-    </ng-template>
+  <!-- PrimeNG Dialog for editing an achievement -->
+  <p-dialog
+    header="Edit Achievement"
+    [(visible)]="displayEditDialog"
+    modal="true"
+    [closable]="true"
+    [style]="{ width: '400px', height: '450px' }"
+  >
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="editAchievementName">Attitude Skill</label>
+        <input
+          pInputText
+          id="editAchievementName"
+          [(ngModel)]="editAttitudeSkill.attitude_skill_name"
+          placeholder="Enter Achievement Name"
+        />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="editGroupAchievement">Group Attitude Skill</label>
+        <p-dropdown
+          [options]="groupAttitudeSkillOptions"
+          [(ngModel)]="editAttitudeSkill.group_attitude_skill_id"
+          placeholder="Select Group Achievement"
+        >
+        </p-dropdown>
+      </div>
+    </div>
+    <p-footer>
+      <button
+        type="button"
+        pButton
+        label="Save"
+        icon="pi pi-check"
+        (click)="updateAttitudeSkill()"
+      ></button>
+      <button
+        type="button"
+        pButton
+        label="Cancel"
+        icon="pi pi-times"
+        (click)="displayEditDialog = false"
+      ></button>
+    </p-footer>
+  </p-dialog>
 
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="4">No achievements found.</td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <!-- Existing Table for Achievements -->
+  <div class="card">
+    <p-table
+      #dt2
+      [value]="attitudeSkills"
+      dataKey="id"
+      [rows]="10"
+      [rowsPerPageOptions]="[10, 25, 50]"
+      [loading]="isLoading"
+      [paginator]="true"
+      [globalFilterFields]="[
+        'attitude_skill_name',
+        'group_name',
+        'group_attitude_skill_id'
+      ]"
+      [tableStyle]="{ 'min-width': '55rem' }"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th style="width: 10px">No.</th>
+          <th class="division-column">Attitude Skill</th>
+          <th class="division-column">Group Attitude Skill</th>
+          <th class="action-column">Action</th>
+        </tr>
+        <tr>
+          <th></th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="attitude_skill_name"
+              placeholder="Search by attitude skill"
+              ariaLabel="Filter Attitude Skill"
+            />
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="group_name"
+              placeholder="Search by Group Attitude Skill"
+              ariaLabel="Filter Group Attitude skill"
+            />
+          </th>
+          <th></th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-achievement let-i="rowIndex">
+        <tr>
+          <td>{{ i + 1 }}</td>
+          <td>{{ achievement.attitude_skill_name }}</td>
+          <td>{{ achievement.group_name }}</td>
+          <td>
+            <div class="action-buttons">
+              <button
+                pButton
+                icon="pi pi-pencil"
+                class="p-button-sm p-button-info"
+                (click)="showEditDialog(achievement)"
+              ></button>
+              <button
+                pButton
+                icon="pi pi-trash"
+                class="p-button-sm p-button-danger"
+                (click)="deleteAttitudeSkill(achievement.id)"
+              ></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="4">No achievements found.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
