--- a/src/app/features/nav-bar/user-profile/user-profile.component.html
+++ b/src/app/features/nav-bar/user-profile/user-profile.component.html
@@ -1,4 +1,5 @@
 <app-nav-bar></app-nav-bar>
+
 <div class="profile-container">
   <!-- Sidebar -->
   <div class="profile-sidebar">
@@ -113,16 +114,19 @@
             class="form-control"
           />
           @if(passwordForm!.get('newPassword')?.touched){
-            @if(passwordForm!.get('newPassword')?.invalid){
-              @if(passwordForm!.get('newPassword')?.hasError('required')){
-                <small class="text-danger">New password is required.</small>
-              }@else if(passwordForm!.get('newPassword')?.hasError('minlength')) {
-                <small class="text-danger">Password must be at least 8 characters.</small>
-              }
-            }@else if (passwordForm!.get('newPassword')?.value === passwordForm!.get('currentPassword')?.value) {
-              <small class="text-danger">New password cannot be the same as the old password.</small>
-            }
-          }
+          @if(passwordForm!.get('newPassword')?.invalid){
+          @if(passwordForm!.get('newPassword')?.hasError('required')){
+          <small class="text-danger">New password is required.</small>
+          }@else if(passwordForm!.get('newPassword')?.hasError('minlength')) {
+          <small class="text-danger"
+            >Password must be at least 8 characters.</small
+          >
+          } }@else if (passwordForm!.get('newPassword')?.value ===
+          passwordForm!.get('currentPassword')?.value) {
+          <small class="text-danger"
+            >New password cannot be the same as the old password.</small
+          >
+          } }
         </div>
 
         <!-- Confirm Password Field -->
@@ -135,10 +139,10 @@
             class="form-control"
           />
           @if(passwordForm!.get('confirmPassword')?.touched){
-            @if(passwordForm!.get('confirmPassword')?.value !== passwordForm!.get('newPassword')?.value){
-              <small class="text-danger">Passwords do not match.</small>
-            }            
-          }
+          @if(passwordForm!.get('confirmPassword')?.value !==
+          passwordForm!.get('newPassword')?.value){
+          <small class="text-danger">Passwords do not match.</small>
+          } }
         </div>
 
         <button type="submit" class="btn" [disabled]="passwordForm!.invalid">
