--- a/src/app/emp-technical-skill/emp-technical-skill.component.html
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<div class="container">
+<div class="container" style="background-color: #f5f5f5">
   <h1 class="title">FORM EVALUASI KINERJA - KEAHLIAN TEKNIS</h1>
 
   <div class="form-group">
