--- a/src/app/emp-dev-plan/emp-dev-plan.component.html
+++ b/src/app/emp-dev-plan/emp-dev-plan.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="container">
+<div class="container" style="background-color: #f5f5f5">
   <h1 class="title">FORM EVALUASI KINERJA - RENCANA PENGEMBANGAN</h1>
 
   <div class="form-group">
