--- a/src/app/features/attitude-skill/attitude-skill.component.html
+++ b/src/app/features/attitude-skill/attitude-skill.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="error">{{ error }}</div>
 
 <app-nav-bar></app-nav-bar>
-<div class="container">
+<div class="container" style="background-color: #f5f5f5">
   <h2 class="title">SIKAP & KEAHLIAN</h2>
 
   <!-- Button to open the create modal -->
@@ -13,7 +13,7 @@
       (click)="showCreateDialog()"
     ></p-button>
   </div>
-
+  <br />
   <!-- PrimeNG Dialog for creating a new group achievement -->
   <p-dialog
     header="Create New Attitude Skill"
