--- a/src/app/features/division/division.component.html
+++ b/src/app/features/division/division.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="error">{{ error }}</div>
 
 <app-nav-bar></app-nav-bar>
-<div class="container">
+<div class="container" style="background-color: #f5f5f5">
   <h2 class="title">DIVISI</h2>
 
   <!-- Button to open the create modal -->
@@ -13,6 +13,7 @@
       (click)="showCreateDialog()"
     ></p-button>
   </div>
+  <br />
 
   <!-- PrimeNG Dialog for creating a new group attitude skill -->
   <p-dialog
