--- a/src/app/features/role-menu/role-menu.component.html
+++ b/src/app/features/role-menu/role-menu.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="container">
+<div class="container" style="background-color: #f5f5f5">
   <h2 class="title">ROLE MENU</h2>
   <p-table
     [value]="menus"
