--- a/src/app/features/technical-skill/technical-skill/technical-skill.component.html
+++ b/src/app/features/technical-skill/technical-skill/technical-skill.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="container">
+<div class="container" style="background-color: #f5f5f5">
   <h2 class="title">KEAHLIAN TEKNIS</h2>
 
   <div class="card flex justify-content-end">
@@ -12,7 +12,7 @@
       (click)="openCreateDialog()"
     ></button>
   </div>
-
+  <br />
   <div class="card">
     <p-table
       #dt2
