--- a/src/app/features/user/user-list/user-list.component.html
+++ b/src/app/features/user/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="container">
+<div class="container" style="background-color: #f5f5f5">
   <h2 class="title">USERS</h2>
   <div class="card flex justify-content-end">
     <button
@@ -11,6 +11,8 @@
       (click)="openCreateDialog()"
     ></button>
   </div>
+  <br />
+
   <!-- user-table.component.html -->
   <p-table
     #dt1
