--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -31,6 +31,9 @@
           pInputText
           [(ngModel)]="newGroupAchievement.group_achievement_name"
         />
+        <div *ngIf="isDuplicate" style="color: red; font-size: 15px">
+          Data sudah ada
+        </div>
       </div>
       <br />
       <div class="p-field">
