more changes to summary

--- a/src/app/emp-achieve/emp-achieve.component.html
+++ b/src/app/emp-achieve/emp-achieve.component.html
@@ -272,7 +272,7 @@
             icon="pi pi-trash"
             label="Delete"
             class="p-button-sm p-button-danger"
-            (click)="deleteEmpAchieve(achievement.id)"
+            (click)="deleteEmpAchieve(achievement.id, achievement.user_id, achievement.assessment_year)"
           ></button>
         </td>
       </tr>
