--- a/src/app/features/nav-bar/user-profile/user-profile.component.html
+++ b/src/app/features/nav-bar/user-profile/user-profile.component.html
@@ -53,7 +53,7 @@
           <strong>Join Date:</strong>
           {{ user.join_date | date : "MMM d, yyyy" }}
         </p>
-        <p><strong>Status:</strong> {{ user.employee_status }}</p>
+        <!-- <p><strong>Status:</strong> {{ user.employee_status }}</p> -->
         <div class="roles-section">
           <p><strong>Roles:</strong></p>
           <div class="roles-container">
